--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "PicGallery",
   "version": "1.0.0",
   "description": "A photo-sharing platform built with React, Node.js, and MongoDB Atlas.",
-  "main": "src/app.ts",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc",
     "test": "jest",
@@ -17,9 +17,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.3.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^7.0.0",
-    "multer": "^1.4.4"
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -32,7 +32,7 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^18.15.0",
     "@types/uuid": "^10.0.0",
-    "jest": "^26.6.3",
+    "jest": "^30.2.0",
     "nodemon": "^2.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
