--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "vercel-build": "echo 'Building for Vercel'"
   },
   "dependencies": {
